@@ -128,6 +128,7 @@ error.datetime.range=Only dates between January 1, 1753 and December 31, 9999 ar
 error.datetime.range.era=Only dates in the AD era are accepted.
 error.dbmeta.nouser=Unable to determine the user name.
 error.driver.badurl=The syntax of the connection URL ''{0}'' is invalid.
+error.generic.unspecified=The server returned an unspecified error.
 error.generic.badoption=Invalid option value ''{0}'' for parameter {1}.
 error.generic.badparam=Invalid value ''{0}'' for parameter {1}.
 error.generic.badscale=The decimal scale must be >= 0 and <= 28.
